# OpenResearch

./: .env.example  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  starter.py  test_system.py
Agent/: __init__.py  agent.py
src/agent/core/: graph.py  llm.py  state.py
src/agent/nodes/: planner.py  processing.py  query_gen.py  reasoning.py  search.py  storage.py  synthesis.py
src/agent/tools/: scraper.py
src/api/: cli.py  main.py  server.py
src/database/: embeddings.py  vector_db.py
tools/: __init__.py
web/: app.js  index.html  package-lock.json  style.css
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Composer.tsx  EmptyState.tsx  MessageBubble.tsx  PipelineTracker.tsx  Sidebar.tsx  SourcePanel.tsx  Toast.tsx
web/src/lib/: research.ts  types.ts
