[project]
name = "researching-ai"
version = "0.2.0"
description = "Advanced deep research AI with LangGraph, Google Gemini, and Tavily search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "tavily-python>=0.7.23",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.24",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "ollama>=0.1.8",
    "tiktoken>=0.6.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "weasyprint>=60.0",
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]
